--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,6 @@ body, html {
   background: #dbe9f4;
 }
 
-h1 {
-  text-align: center;
-  margin-bottom: 50px;
-  font-size: 4rem;
-}
-
 #vocabulary__category-wrapper {
   width: 100%;
 }
@@ -27,7 +21,7 @@ h1 {
   width: 300px;
   border: 2px solid #ff7400;
   background: #fff;
-  margin:auto;
+  margin: auto;
   font-size: 2rem;
   margin-bottom: 20px;
   padding: 15px;
@@ -39,7 +33,8 @@ h1 {
 #vocabulary__wrapper {
   width: 800px;
   position: relative;
-  margin:auto;
+  margin: auto;
+  padding: 20px;
 }
 
 .show {
@@ -67,26 +62,46 @@ h1 {
   font-size: 3rem;
 }
 
-#next, #prev,#exit {
+#next, #prev, #exit {
   height: 50px;
   width: 100px;
   border: 2px solid #ff7400;
   cursor: pointer;
-  position: absolute;
   line-height: 50px;
   border-radius: 5px;
   background: #fff;
+  font-size: 1rem;
 }
 
-#next, #prev{
-  left:80%;
+#next, #prev {
+  left: 80%;
   top: 50%;
+  position: absolute;
 }
 
-#next{
-  left:80%;
+#next {
+  left: 80%;
 }
 
 #prev {
-  left:8%;
+  left: 8%;
+}
+
+.vocabulary__title {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+h1 {
+  text-align: center;
+  font-size: 4rem;
+}
+
+#exit, h1 {
+  align-self: center;
+}
+
+#exit {
+  margin-left: 10px;
 }
