--- a/css/style.css
+++ b/css/style.css
@@ -23,11 +23,18 @@ body, html {
   background: #fff;
   margin: auto;
   font-size: 2rem;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   padding: 15px;
   text-align: center;
   border-radius: 10px;
   cursor: pointer;
+}
+
+.info {
+  width: 50%;
+  margin:auto;
+  list-style: none;
+  font-size: 1.2rem;
 }
 
 #vocabulary__wrapper {
@@ -119,6 +126,11 @@ h1 {
     border-radius: 20px;
   }
 
+  .info {
+    width: 100%;
+    font-size: 2rem;
+  }
+
   #vocabulary__wrapper {
     width: 100%;
   }
@@ -176,5 +188,4 @@ h1 {
     text-align: center;
     font-size: 5rem;
   }
-
 }
