updated media query

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body, html {
   font-family: 'Roboto', sans-serif;
   padding: 30px;
   background: #dbe9f4;
+  overflow-x: hidden;
 }
 
 #vocabulary__category-wrapper {
@@ -117,8 +118,8 @@ h1 {
   and (max-device-width: 480px)
   and (-webkit-min-device-pixel-ratio: 2) {
   .vocabulary__category {
-    width: 800px;
-    height: 200px;
+    width: 80%;
+    height: 175px;
     font-size: 3.5rem;
     margin-bottom: 20px;
     line-height: 200px;
@@ -136,8 +137,8 @@ h1 {
 
   .vocabulary__card {
     border: 4px solid #ff7400;
-    height: 550px;
-    width: 750px;
+    height: 400px;
+    width: 80%;
     border-radius: 20px;
   }
 
@@ -159,7 +160,7 @@ h1 {
     top: 100%;
     position: absolute;
     height: 150px;
-    width: 300px;
+    width: 250px;
     font-size: 2rem;
     margin-top: 20px;
   }
@@ -169,12 +170,12 @@ h1 {
   }
 
   #prev {
-    left: 8%;
+    left: 12%;
   }
 
   #exit {
     height: 100px;
-    width: 200px;
+    width: 175px;
     font-size: 2rem;
   }
 
@@ -185,6 +186,6 @@ h1 {
 
   h1 {
     text-align: center;
-    font-size: 5rem;
+    font-size: 4.5rem;
   }
 }
